Change the description of Forrest to the paragraph decided on forrest-dev.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7596 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+
+<!-- FIXME:
+Please note that this HTML mess was *NOT* created by Forrest.
+It is a hack document from someone's webpage editor, and will be tidy soon.
+-->
 <html>
 <head>
   <title>Apache Forrest</title>
@@ -134,11 +139,13 @@ h3, h4                  { font-size: 120% }
 </table>
 <br>
 <h3>&nbsp; What is this?</h3>
-&nbsp; Forrest provides a sound technological infrastructure for open software<br>
-&nbsp; development for the Apache Software Foundation based on ASF software,<br>
-&nbsp; ASF practices and experience, and modern software design principles.<br>
-&nbsp; <br>
-&nbsp;
+<p>
+Forrest is an XML standards-oriented project documentation framework
+based on Apache Cocoon, providing XSLT stylesheets and schemas, images
+and other resources. Forrest uses these to render the XML source
+content into a website via command-line, robot, or a dynamic web
+application.
+</p>
 <h3>&nbsp; Why?</h3>
 &nbsp; If you ever participated in ASF open development you know why: there
 is always<br>
@@ -222,8 +229,8 @@ http://xml.apache.org/</span><br>
 
 <address>       </address>
 
-<hr hr="hr">        Copyright &copy;2002 Apache Software Foundation. All Rights
-Reserved.         <br>
+<hr hr="hr">        Copyright &copy;2002 Apache Software Foundation. All rights
+reserved.         <br>
  <br>
 </body>
 </html>
