--- a/src/resources/forrestbot/webapp/welcome.html
+++ b/src/resources/forrestbot/webapp/welcome.html
@@ -4,7 +4,7 @@ This site contains automatically updated and built versions of websites built
 with the latest <a href="http://xml.apache.org/forrest/">Forrest</a>. It aims
 to provide a service similar to <a
   href="http://jakarta.apache.org/gump/">Gump</a>, but for websites.  Host
-projects' XML is automatically checked out and the HTML rebuilt every hour.
+projects' XML is automatically checked out and the HTML rebuilt every 4 hours.
 </p>
 <p>
 In addition, if you have just made a site update and are itching to see the
