Update text about publishing
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@8223 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/forrestbot/webapp/welcome.html
+++ b/src/resources/forrestbot/webapp/welcome.html
@@ -11,14 +11,15 @@ In addition, if you have just made a site update and are itching to see the
 result, site refreshes can be triggered manually.
 </p>
 <p>
-In future (pending lots more security) designated users will be able to commit
-the regenerated HTML to Apache's <b>xml-site</b> module. Right now this only
-works for the xml-forrest module.
+Certain users can also trigger an automatic publish of the generated HTML/PDFs
+to Apache's site CVS module (xml-site, avalon-site, etc).
 </p>
 <p>
-To manually refresh a site or trigger an update requires a username/password,
-available on request.
+To request a username/password that allows you to refresh and/or publish your
+project's site, please mail <a href="mailto:jefft.at.apache.org">Jeff
+  Turner</a>.
 </p>
+
 <p>
 If you have any questions, please mail <a
   href="mailto:jefft.at.apache.org">Jeff Turner</a>, or <a
