view 'built' sites not locally 'deployed' sites; local welcome page; table of statuses on front
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9082 13f79535-47bb-0310-9956-ffa450edef68

--- a/scratchpad/forrestbot2/webapp/welcome.html
+++ b/scratchpad/forrestbot2/webapp/welcome.html
@@ -4,27 +4,13 @@ This site contains automatically updated and built versions of websites built
 with the latest <a href="http://xml.apache.org/forrest/">Forrest</a>. It aims
 to provide a service similar to <a
   href="http://jakarta.apache.org/gump/">Gump</a>, but for websites.  Host
-projects' XML is automatically checked out and the HTML rebuilt every 4 hours.
+projects' XML is automatically checked out and the HTML rebuilt periodically.
 </p>
 <p>
 In addition, if you have just made a site update and are itching to see the
-result, site builds can be triggered manually.
-</p>
-<p>
-Certain users can also trigger an automatic build of the generated HTML/PDFs
-to Apache's site CVS module (xml-site, avalon-site, etc).
-</p>
-<p>
-To request a username/password that allows you to build and/or deploy your
-project's site, please mail <a href="mailto:jefft.at.apache.org">Jeff
-  Turner</a>.
+result, site builds can be triggered manually.  Certain users can also
+trigger a publish of the generated files.
 </p>
 <p>
 To set up the Forrestbot Web Inteface for your own collection of projects, checkout the source and read WEB-INF/README.txt
-
-<p>
-If you have any questions, please mail <a
-  href="mailto:jefft.at.apache.org">Jeff Turner</a>, or <a
-  href="mailto:forrest-dev.at.xml.apache.org">forrest-dev</a>
 </p>
-
