remove unneded frame and fix html version link
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9222 13f79535-47bb-0310-9956-ffa450edef68

--- a/scratchpad/forrestdoc/src/resources/vizant/links.html
+++ b/scratchpad/forrestdoc/src/resources/vizant/links.html
@@ -10,7 +10,7 @@
 <ul>
  <li><a target="mainFrame" href="vizant.png">Dot</a></li>
  <li><a target="mainFrame" href="vizant.svg">SVG</a></li>
- <li><a target="mainFrame" href="build.html">Html</a></li>
+ <li><a target="mainFrame" href="target.html">Html</a></li>
  <li><a target="mainFrame" href="tg.html">TouchGraph</a></li>
 <ul>
 </body>
