--- a/scratchpad/forrestbot2/webapp/src/webapp/welcome.html
+++ b/scratchpad/forrestbot2/webapp/src/webapp/welcome.html
@@ -1,18 +1,3 @@
-<!--
-  Copyright 2003-2004 The Apache Software Foundation
-
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-
-      http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
 <p>
 This site contains automatically updated and built versions of websites built
 with the latest <a href="http://xml.apache.org/forrest/">Forrest</a>. It aims
@@ -26,6 +11,6 @@ result, site builds can be triggered manually.  Certain users can also
 trigger a publish of the generated files.
 </p>
 <p>
-To set up the Forrestbot Web Inteface for your own collection of projects, checkout the source and read WEB-INF/README.txt
+To set up the Forrestbot Web Inteface for your own collection of projects, checkout the source and read README.txt
 </p>
 <hr>
