--- a/scratchpad/forrestbot2/webapp/src/webapp/welcome.html
+++ b/scratchpad/forrestbot2/webapp/src/webapp/welcome.html
@@ -14,16 +14,9 @@
   limitations under the License.
 -->
 <p>
-This site contains automatically updated and built versions of websites built
-with the latest <a href="http://xml.apache.org/forrest/">Forrest</a>. It aims
-to provide a service similar to <a
-  href="http://jakarta.apache.org/gump/">Gump</a>, but for websites.  Hosted
-projects' source is automatically checked out and the HTML rebuilt periodically.
-</p>
-<p>
-In addition, if you have just made a site update and are itching to see the
-result, site builds can be triggered manually.  Certain users can also
-trigger a publish of the generated files.
+This interface allows you to <b>build</b> a local copy of a project website (using 
+the latest docs from the project's CVS) and view it.  If it is acceptable, you can
+<b>deploy</b> it to the live site.
 </p>
 <p>
 To set up the Forrestbot Web Inteface for your own collection of projects, checkout the source and read README.txt
