Update the standalone index page after the change to "copyless".
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@20495 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <!--
   Copyright 2002-2004 The Apache Software Foundation
 
@@ -39,44 +39,52 @@ Please note that this HTML file was _not_ created by Forrest.
       into a website via command-line, robot, or a dynamic web application.</p>
 
    <h2>What do I do now?</h2>
-   <p>You are using a 'source' distribution of Forrest. You need to first 
-      build Forrest, by typing <pre>   build.bat</pre> (Windows) or <pre>   ./build.sh</pre>
-      (Unix).</p>
+   <p>You are using a "source" distribution of Forrest. You need to first 
+      build Forrest, by typing <pre>   'build.bat'</pre> (Windows)
+      or <pre>   './build.sh'</pre> (Unix).</p>
 
-   <p>This will create a "shbat" distribution in <pre>   build/dist/shbat</pre>
-   , or whever the <pre>   dist-shbat.dir</pre> property is set to. You should now add the 
-   <pre>   build/dist/shbat/bin</pre> directory to your PATH variable.</p>
+   <p>
+     Follow the instructions to set environment variables FORREST_HOME and PATH.
+   </p>
 
-   <p>If you have done this correctly, you are now ready to test out Forrest! 
-      Here are three things to try.</p>
+   <p>Forrest is now ready to go! Here are three things to try ...</p>
    
-   <h3>Render the Forrest website</h3>
-   <p>Simply type <pre>   forrest</pre> in this (Forrest's source distribution) 
-      directory. It should chug along for a good while (Forrest's site is quite 
-      large), and render the HTML and PDFs to <pre>   build/site</pre></p>
+   <h3>Render the Forrest documentation</h3>
+   <p>Simply type <pre>   'forrest'</pre> in this (Forrest's source distribution) 
+      top-level directory. This will render the HTML and PDFs to
+      <pre>   build/site/</pre>
+      Point your web browser to the index.html file there.
+   </p>
 
     <h3>Run a webapp of the Forrest site</h3>
-    <p>Type <pre>   forrest run</pre> in this directory. You can then point your browser to 
-       <a href="http://localhost:8888/">http://localhost:8888/</a>
-      , and view the Forrest website generated dynamically. Experiment with editing docs in 
-      <pre>   build/webapp/content/xdocs</pre>, and watch them be (nearly) instantly rendered.</p>
+    <p>Type <pre>   'forrest run'</pre> in this top-level directory.
+      You can then point your browser to 
+      <a href="http://localhost:8888/">http://localhost:8888/</a>
+      and view the Forrest website generated dynamically. Experiment with
+      editing docs in 
+      <pre>   src/documentation/content/xdocs/</pre> and watch them be
+      instantly rendered.
+     </p>
 
       <h3>Generate your own site</h3>
-      <p>Create a new (clean) directory, and type <pre>   forrest seed</pre>. 
+      <p>Create a new (empty) directory in your home space, cd to it, and type
+       <pre>   'forrest seed'</pre> 
          This will generate a skeleton directory structure and template XML. 
-         If you like, edit the XML in <pre>   src/documentation/content/xdocs</pre>.
-         Now type <pre>   forrest</pre> to render your new site, or <pre>   forrest run</pre>
+         If you like, edit the XML in
+         <pre>   src/documentation/content/xdocs/</pre>
+         Now type <pre>   'forrest'</pre> to render your new site,
+         or <pre>   'forrest run'</pre>
          to generate a <a href="http://localhost:8888/">webapp</a>.</p>
 
-   <p>For further information, please read our 
+   <p>For further information please read our 
    <a href="http://xml.apache.org/forrest/your-project.html">Getting Started</a>
    guide. If you have any questions or suggestions, please subscribe to the 
-   <a href="http://xml.apache.org/forrest/mail-lists.html#forrest-dev">forrest-dev mailing list</a>.</p>
+   <a href="http://xml.apache.org/forrest/mail-lists.html">Forrest mailing lists</a>.</p>
 
    <p>Thanks for using Apache Forrest!</p>
 
-   <hr hr="hr" />
+   <hr />
 
-   <p>Copyright 2002-2003 Apache Software Foundation. All rights reserved.</p></body>
+   <p>Copyright 2002-2004 Apache Software Foundation. All rights reserved.</p></body>
 </html>
 
