Test commit after move repository.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@20766 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Please note that this HTML file was _not_ created by Forrest.
    <img src="src/documentation/resources/images/project-logo.gif" alt="forrest" />
    <br />
    &gt;<a href="http://www.apache.org/" class="title">Apache</a>
-   &gt;<a href="http://xml.apache.org/" class="title">Xml</a>
+   &gt;<a href="http://xml.apache.org/" class="title">XML</a>
    &gt;<a href="http://xml.apache.org/forrest/" class="title">Forrest</a>
 
    <hr />
