--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Please note that this HTML file was _not_ created by Forrest.
    <hr />
 
    <h2>What is this?</h2>
-   <p>Forrest is an XML standards-oriented project documentation framework 
+   <p>Forrest is an XML standards-oriented documentation framework 
       based on Apache Cocoon, providing XSLT stylesheets and schemas, images 
       and other resources. Forrest uses these to render the XML source content 
       into a website via command-line, robot, or a dynamic web application.</p>
