Fix more old Forrest URLs.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@20966 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Please note that this HTML file was _not_ created by Forrest.
    <br />
    &gt;<a href="http://www.apache.org/" class="title">Apache</a>
    &gt;<a href="http://xml.apache.org/" class="title">XML</a>
-   &gt;<a href="http://xml.apache.org/forrest/" class="title">Forrest</a>
+   &gt;<a href="http://forrest.apache.org/" class="title">Forrest</a>
 
    <hr />
 
@@ -77,9 +77,9 @@ Please note that this HTML file was _not_ created by Forrest.
          to generate a <a href="http://localhost:8888/">webapp</a>.</p>
 
    <p>For further information please read our 
-   <a href="http://xml.apache.org/forrest/your-project.html">Getting Started</a>
+   <a href="http://forrest.apache.org/your-project.html">Getting Started</a>
    guide. If you have any questions or suggestions, please subscribe to the 
-   <a href="http://xml.apache.org/forrest/mail-lists.html">Forrest mailing lists</a>.</p>
+   <a href="http://forrest.apache.org/mail-lists.html">Forrest mailing lists</a>.</p>
 
    <p>Thanks for using Apache Forrest!</p>
 
