Update whole website. Gradually changing URLs to forrest.apache.org
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@20968 13f79535-47bb-0310-9956-ffa450edef68

--- a/body-index.html
+++ b/body-index.html
@@ -42,7 +42,7 @@
 <a name="N1000D"></a><a name="Introduction"></a>
 <h3>Introduction</h3>
 <div style="margin-left: 0 ; border: 2px">
-<p>Forrest is an XML standards-oriented project documentation framework
+<p>Forrest is an XML standards-oriented documentation framework
         based on Apache Cocoon, providing XSLT stylesheets and schemas, images
         and other resources. Forrest uses these to render the XML source
         content into a website via command-line, robot, or a dynamic web
@@ -216,7 +216,7 @@
           to view it.
         </p>
 <p>
-          The <a href="http://xml.apache.org/forrest/">Forrest website</a> is updated
+          The <a href="http://forrest.apache.org/">Forrest website</a> is updated
           irregularly and manually, while we develop the <a href="forrestbot.html">forrestbot</a> facility which produces the
           <a href="http://forrestbot.cocoondev.org/">automatically
             generated</a> site.
