--- a/community/howto/bugzilla-patch/howto-bugzilla-patch.html
+++ b/community/howto/bugzilla-patch/howto-bugzilla-patch.html
@@ -10,7 +10,7 @@
 <!--================= start Navigation Path ==================-->
 <table summary="navigation path" width="100%" border="0" cellpadding="0" cellspacing="0">
 <tr>
-<td nowrap="nowrap" valign="middle" bgcolor="#CFDCED" height="20"><img height="1" width="5" alt="" src="../../../skin/images/spacer.gif" class="spacer"><!--===== breadcrumb trail (javascript-generated) ====--><font size="2" face="Arial, Helvetica, Sans-serif"><a href="http://www.apache.org/">apache</a> &gt; <a href="http://xml.apache.org/">xml.apache</a><script src="../../../skin/breadcrumbs.js" language="JavaScript" type="text/javascript"></script></font></td>
+<td nowrap="nowrap" valign="middle" bgcolor="#CFDCED" height="20"><img height="1" width="5" alt="" src="../../../skin/images/spacer.gif" class="spacer"><!--===== breadcrumb trail (javascript-generated) ====--><font size="2" face="Arial, Helvetica, Sans-serif"><a href="http://www.apache.org/">apache</a> &gt; <a href="http://forrest.apache.org/">forrest.apache</a><script src="../../../skin/breadcrumbs.js" language="JavaScript" type="text/javascript"></script></font></td>
 </tr>
 <tr>
 <td bgcolor="#4C6C8F" height="2"><img height="2" width="2" alt="" src="../../../skin/images/spacer.gif" class="spacer"></td>
@@ -23,7 +23,7 @@
 <!--================= start Group Logo ==================-->
 <td bgcolor="#294563"><a href="http://xml.apache.org/"><img class="logoImage" alt="Apache XML" src="../../../images/group-logo.gif"></a></td>
 <!--================= end Group Logo ==================-->
-<!--================= start Project Logo ==================--><td width="100%" align="center" bgcolor="#294563"><a href="http://xml.apache.org/forrest/"><img class="logoImage" alt="Forrest" src="../../../images/project-logo.gif"></a></td>
+<!--================= start Project Logo ==================--><td width="100%" align="center" bgcolor="#294563"><a href="http://forrest.apache.org/"><img class="logoImage" alt="Forrest" src="../../../images/project-logo.gif"></a></td>
 <!--================= end Project Logo ==================-->
 <!--================= start Search ==================--><td valign="top" rowspan="2" bgcolor="#294563">
 <form target="_blank" action="http://www.google.com/search" method="get">
@@ -32,7 +32,7 @@
 <td colspan="3"><img height="10" width="1" alt="" src="../../../skin/images/spacer.gif" class="spacer"></td>
 </tr>
 <tr>
-<td><img height="1" width="1" alt="" src="../../../skin/images/spacer.gif" class="spacer"></td><td nowrap="nowrap"><input value="xml.apache.org" name="as_sitesearch" type="hidden"><input size="15" name="as_q" id="query" type="text"><img height="1" width="5" alt="" src="../../../skin/images/spacer.gif" class="spacer"><input name="Search" value="Search" type="submit">
+<td><img height="1" width="1" alt="" src="../../../skin/images/spacer.gif" class="spacer"></td><td nowrap="nowrap"><input value="forrest.apache.org" name="as_sitesearch" type="hidden"><input size="15" name="as_q" id="query" type="text"><img height="1" width="5" alt="" src="../../../skin/images/spacer.gif" class="spacer"><input name="Search" value="Search" type="submit">
 <br>
 <font face="Arial, Helvetica, Sans-serif" size="2" color="white">
                           the Apache XML site
@@ -117,11 +117,9 @@
 <li>
 <font color="#CFDCED">How-Tos</font>
 <ul>
-    
 <li>
 <a href="../index.html">Index</a>
 </li>
-  
 </ul>
 </li>
 </ul>
@@ -411,21 +409,22 @@ However, if it addressed some serious lack or fixed a misguided configuration
 statement, then the impact could be <span class="codefrag">major</span>.
 </p>
 <p>
-
-
+<!--FIXME: (DS) Why include this if it isn't recommended for a patch? -->
+<!--       (DC) To try to discourage them from using it. Does it need
+better words? -->
 (The <span class="codefrag">enhancement</span> option would not be used for a patch, as it is
 intended for suggesting something that should be done. Use this option wisely.
 It would be better to discuss it on the mailing list first.)
 </p>
 </div>
-<a name="N100A7"></a><a name="Specify+Initial+State"></a>
+<a name="N100AB"></a><a name="Specify+Initial+State"></a>
 <h5>Specify Initial State</h5>
 <div style="margin-left: 0 ; border: 2px">
 <p>
 Use the <span class="codefrag">New</span> option.
 </p>
 </div>
-<a name="N100B4"></a><a name="Specify+Assigned+To"></a>
+<a name="N100B8"></a><a name="Specify+Assigned+To"></a>
 <h5>Specify Assigned To</h5>
 <div style="margin-left: 0 ; border: 2px">
 <p>
@@ -441,7 +440,7 @@ automatically to the <span class="codefrag">cocoon-dev</span> mailing list, so y
 to Cc anyone there.
 </p>
 </div>
-<a name="N100C7"></a><a name="Specify+URL"></a>
+<a name="N100CB"></a><a name="Specify+URL"></a>
 <h5>Specify URL</h5>
 <div style="margin-left: 0 ; border: 2px">
 <p>
@@ -450,7 +449,7 @@ If it refers to an issue with one of the local Cocoon Samples, then provide
 the localhost URL.
 </p>
 </div>
-<a name="N100D1"></a><a name="Carefully+choose+the+Summary"></a>
+<a name="N100D5"></a><a name="Carefully+choose+the+Summary"></a>
 <h5>Carefully choose the Summary</h5>
 <div style="margin-left: 0 ; border: 2px">
 <p>
@@ -466,7 +465,7 @@ lists. The patch queue summary reminds people what patches are pending. If you
 omit this tag, then your patch may easily be overlooked.
 </p>
 </div>
-<a name="N100E1"></a><a name="Description"></a>
+<a name="N100E5"></a><a name="Description"></a>
 <h5>Description</h5>
 <div style="margin-left: 0 ; border: 2px">
 <p>
@@ -482,12 +481,12 @@ your patch report. You could save it in a local text file beforehand and
 then copy-and-paste it when the time comes.
 </p>
 <p>
-
+<!--FIXME (DS): Do we need this? It's a patch, not a bug. It may be confusing. -->
 If this were a bug report, then it would need extensive description.
 </p>
 </div>
 </div>
-<a name="N100F2"></a><a name="3.+Send+the+patch+report"></a>
+<a name="N100F8"></a><a name="3.+Send+the+patch+report"></a>
 <h4>3. Send the patch report</h4>
 <div style="margin-left: 0 ; border: 2px">
 <p>
@@ -501,7 +500,7 @@ The next steps will show you how to attach your patch to the report that you
 have just created ...
 </p>
 </div>
-<a name="N10105"></a><a name="4.+Create+an+attachment+of+the+actual+patch"></a>
+<a name="N1010B"></a><a name="4.+Create+an+attachment+of+the+actual+patch"></a>
 <h4>4. Create an attachment of the actual patch</h4>
 <div style="margin-left: 0 ; border: 2px">
 <p>
@@ -516,7 +515,7 @@ then you can add more comments. From that screen, follow the link
 Otherwise follow the link from this status screen to "Attach a file to
 this bug".
 </p>
-<a name="N10114"></a><a name="Specify+the+file+to+be+uploaded"></a>
+<a name="N1011A"></a><a name="Specify+the+file+to+be+uploaded"></a>
 <h5>Specify the file to be uploaded</h5>
 <div style="margin-left: 0 ; border: 2px">
 <p>
@@ -525,7 +524,7 @@ Provide the local pathname to your patchfile, e.g.
 
 </p>
 </div>
-<a name="N10121"></a><a name="Describe+the+attachment"></a>
+<a name="N10127"></a><a name="Describe+the+attachment"></a>
 <h5>Describe the attachment</h5>
 <div style="margin-left: 0 ; border: 2px">
 <p>
@@ -534,7 +533,7 @@ Provide a concise one line description, e.g.
 
 </p>
 </div>
-<a name="N1012E"></a><a name="Specify+the+contentType+of+the+attachment"></a>
+<a name="N10134"></a><a name="Specify+the+contentType+of+the+attachment"></a>
 <h5>Specify the contentType of the attachment</h5>
 <div style="margin-left: 0 ; border: 2px">
 <p>
@@ -547,7 +546,7 @@ If the patch is just a single diff file, then select
 </p>
 </div>
 </div>
-<a name="N10142"></a><a name="5.+Submit+the+attachment"></a>
+<a name="N10148"></a><a name="5.+Submit+the+attachment"></a>
 <h4>5. Submit the attachment</h4>
 <div style="margin-left: 0 ; border: 2px">
 <p>
@@ -556,7 +555,7 @@ you will be presented with a status screen saying that your attachment
 was accepted and that email was sent to <span class="codefrag">cocoon-dev</span> mailing list.
 </p>
 </div>
-<a name="N10152"></a><a name="6.+Be+patient"></a>
+<a name="N10158"></a><a name="6.+Be+patient"></a>
 <h4>6. Be patient</h4>
 <div style="margin-left: 0 ; border: 2px">
 <p>
@@ -566,7 +565,7 @@ it to the master CVS repository. As the registered owner of the Bug, you will
 be sent an automatic email at each of these stages.
 </p>
 </div>
-<a name="N1015C"></a><a name="7.+Add+more+description+or+attachments+if+necessary"></a>
+<a name="N10162"></a><a name="7.+Add+more+description+or+attachments+if+necessary"></a>
 <h4>7. Add more description or attachments if necessary</h4>
 <div style="margin-left: 0 ; border: 2px">
 <p>
@@ -580,7 +579,7 @@ veto and may decide to make some slight modifications to your patch. So it
 is far better to wait.
 </p>
 </div>
-<a name="N10166"></a><a name="8.+Adding+subsequent+patches+to+the+same+document+or+program"></a>
+<a name="N1016C"></a><a name="8.+Adding+subsequent+patches+to+the+same+document+or+program"></a>
 <h4>8. Adding subsequent patches to the same document or program</h4>
 <div style="margin-left: 0 ; border: 2px">
 <p>
@@ -590,15 +589,15 @@ applied by the committer, its corresponding Bug report is closed.
 </p>
 </div>
 </div>
-<a name="N10170"></a><a name="Real World Extension"></a>
+<a name="N10176"></a><a name="Real World Extension"></a>
 <h3>Real World Extension</h3>
 <div style="margin-left: 0 ; border: 2px">
 <p>Contributing patches, in the form of documentation or code, is a vital way to give back to the Cocoon community. For example, you might consider contributing a timely patch in the form of a new FAQ, how-to, or tutorial. Or, you may also consider submitting a patch which updates Cocoon's existing user and developer guides. </p>
 </div>
-<a name="N10178"></a><a name="Tips"></a>
+<a name="N10180"></a><a name="Tips"></a>
 <h3>Tips</h3>
 <div style="margin-left: 0 ; border: 2px">
-<a name="N1017D"></a><a name="Setting+user+preferences"></a>
+<a name="N10185"></a><a name="Setting+user+preferences"></a>
 <h4>Setting user preferences</h4>
 <div style="margin-left: 0 ; border: 2px">
 <p>
@@ -606,7 +605,7 @@ You can configure certain preferences, though the Bugzilla defaults work just
 fine.
 </p>
 </div>
-<a name="N10187"></a><a name="Review+the+bugzilla+documentation"></a>
+<a name="N1018F"></a><a name="Review+the+bugzilla+documentation"></a>
 <h4>Review the bugzilla documentation</h4>
 <div style="margin-left: 0 ; border: 2px">
 <p>
@@ -614,7 +613,7 @@ There are various explanations of terminology and procedures ... follow the
 links should you need to know more.
 </p>
 </div>
-<a name="N10191"></a><a name="Search+Bugzilla"></a>
+<a name="N10199"></a><a name="Search+Bugzilla"></a>
 <h4>Search Bugzilla</h4>
 <div style="margin-left: 0 ; border: 2px">
 <p>
@@ -624,7 +623,7 @@ single click.
 </p>
 </div>
 </div>
-<a name="N1019B"></a><a name="References"></a>
+<a name="N101A3"></a><a name="References"></a>
 <h3>References</h3>
 <div style="margin-left: 0 ; border: 2px">
 <ul>
@@ -642,7 +641,7 @@ Bug entry interface.
   
 </ul>
 </div>
-<a name="N101AD"></a><a name="revisions"></a>
+<a name="N101B5"></a><a name="revisions"></a>
 <h3>Revisions</h3>
 <div style="margin-left: 0 ; border: 2px">
 <p>Find a problem with this document? Consider contacting the mailing lists or submitting your own revision. For instructions, read the How To Submit a Revision.</p>
