--- a/linkmap-index.html
+++ b/linkmap-index.html
@@ -1,4 +1,18 @@
-<?xml version="1.0" encoding="ISO-8859-1"?><site xmlns="http://apache.org/forrest/linkmap/1.0" label="Forrest" href="" tab="home">
+<?xml version="1.0" encoding="ISO-8859-1"?><!--
+  Copyright 2002-2004 The Apache Software Foundation
+
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+--><site xmlns="http://apache.org/forrest/linkmap/1.0" label="Forrest" href="" tab="home">
 
   <about label="About">
     <index label="Index" href="index.html"/>
@@ -36,7 +50,9 @@
     </sitemap-ref>
     <searching label="Searching" href="searching.html"/>
     <skin-package label="Skin Packages" href="skin-package.html"/>
-    
+    <!--
+    <quick-xml label="XML Guide" href="quick-xml.html"/>
+    -->
     <forrest-contract label="Our Contract" href="forrest-contract.html"/>
     <compliance label="Standards Compliance" href="compliance.html"/>
     <dtd-docs label="DTD documentation" href="dtd-docs.html"/>
@@ -97,13 +113,25 @@
     <forrest-issues label="Open Issues" href="forrest-issues.html"/>
   </getting-involved>
 
+<!-- NOTE: Still at DRAFT stage. Do not make public until we are ready. -->
+<!--
+  <project label="Project Management">
+    <guidelines label="Guidelines" href="guidelines.html"/>
+  </project>
+-->
+
   <references label="Related projects">
     <gump label="Apache Gump" href="http://gump.apache.org/"/>
     <cocoon label="Apache Cocoon" href="http://cocoon.apache.org/"/>
     <lenya label="Apache Lenya" href="http://cocoon.apache.org/lenya/"/>
     <centipede label="Krysalis Centipede" href="http://www.krysalis.org/"/>
   </references>
-  
+  <!-- Uncomment this if we want aggregate HTML/PDFs for this site 
+  <pdfs label="PDFs">
+    <whole_site_html label="Whole site HTML" href="site.html"/>
+    <whole_site_pdf label="Whole site PDF" href="site.pdf"/>
+  </pdfs>
+  -->
 
   <external-refs>
     <cocoon href="http://cocoon.apache.org/2.1/">
@@ -115,8 +143,8 @@
       <input-modules href="http://cocoon.apache.org/2.1/userdocs/concepts/modules.html"/>
       <views href="http://cocoon.apache.org/2.1/userdocs/concepts/views.html"/>
     </cocoon>
+    <forrest href="http://forrest.apache.org/"/>
     <xml.apache.org href="http://xml.apache.org/">
-     <forrest href="http://xml.apache.org/forrest/"/>
       <xindice href="http://xml.apache.org/xindice/"/>
       <fop href="http://xml.apache.org/fop/"/>
       <batik href="http://xml.apache.org/batik/"/>
@@ -135,7 +163,7 @@
     <gump href="http://gump.apache.org/"/>
       
     <catalog_spec href="http://www.oasis-open.org/committees/entity/spec.html"/>
-
+<!--<catalog_spec href="http://www.oasis-open.org/committees/entity/background/9401.html"/>-->
     <catalog_intro href="http://www.arbortext.com/Think_Tank/XML_Resources/Issue_Three/issue_three.html"/>
 
     <mail>
