--- a/live-sites.html
+++ b/live-sites.html
@@ -10,7 +10,7 @@
 <!--================= start Navigation Path ==================-->
 <table summary="navigation path" width="100%" border="0" cellpadding="0" cellspacing="0">
 <tr>
-<td nowrap="nowrap" valign="middle" bgcolor="#CFDCED" height="20"><img height="1" width="5" alt="" src="skin/images/spacer.gif" class="spacer"><!--===== breadcrumb trail (javascript-generated) ====--><font size="2" face="Arial, Helvetica, Sans-serif"><a href="http://www.apache.org/">apache</a> &gt; <a href="http://xml.apache.org/">xml.apache</a><script src="skin/breadcrumbs.js" language="JavaScript" type="text/javascript"></script></font></td>
+<td nowrap="nowrap" valign="middle" bgcolor="#CFDCED" height="20"><img height="1" width="5" alt="" src="skin/images/spacer.gif" class="spacer"><!--===== breadcrumb trail (javascript-generated) ====--><font size="2" face="Arial, Helvetica, Sans-serif"><a href="http://www.apache.org/">apache</a> &gt; <a href="http://forrest.apache.org/">forrest.apache</a><script src="skin/breadcrumbs.js" language="JavaScript" type="text/javascript"></script></font></td>
 </tr>
 <tr>
 <td bgcolor="#4C6C8F" height="2"><img height="2" width="2" alt="" src="skin/images/spacer.gif" class="spacer"></td>
@@ -23,7 +23,7 @@
 <!--================= start Group Logo ==================-->
 <td bgcolor="#294563"><a href="http://xml.apache.org/"><img class="logoImage" alt="Apache XML" src="images/group-logo.gif"></a></td>
 <!--================= end Group Logo ==================-->
-<!--================= start Project Logo ==================--><td width="100%" align="center" bgcolor="#294563"><a href="http://xml.apache.org/forrest/"><img class="logoImage" alt="Forrest" src="images/project-logo.gif"></a></td>
+<!--================= start Project Logo ==================--><td width="100%" align="center" bgcolor="#294563"><a href="http://forrest.apache.org/"><img class="logoImage" alt="Forrest" src="images/project-logo.gif"></a></td>
 <!--================= end Project Logo ==================-->
 <!--================= start Search ==================--><td valign="top" rowspan="2" bgcolor="#294563">
 <form target="_blank" action="http://www.google.com/search" method="get">
@@ -32,7 +32,7 @@
 <td colspan="3"><img height="10" width="1" alt="" src="skin/images/spacer.gif" class="spacer"></td>
 </tr>
 <tr>
-<td><img height="1" width="1" alt="" src="skin/images/spacer.gif" class="spacer"></td><td nowrap="nowrap"><input value="xml.apache.org" name="as_sitesearch" type="hidden"><input size="15" name="as_q" id="query" type="text"><img height="1" width="5" alt="" src="skin/images/spacer.gif" class="spacer"><input name="Search" value="Search" type="submit">
+<td><img height="1" width="1" alt="" src="skin/images/spacer.gif" class="spacer"></td><td nowrap="nowrap"><input value="forrest.apache.org" name="as_sitesearch" type="hidden"><input size="15" name="as_q" id="query" type="text"><img height="1" width="5" alt="" src="skin/images/spacer.gif" class="spacer"><input name="Search" value="Search" type="submit">
 <br>
 <font face="Arial, Helvetica, Sans-serif" size="2" color="white">
                           the Apache XML site
@@ -371,7 +371,7 @@
 </li>
       
 <li>
-<a href="http://xml.apache.org/forrest/">Apache Forrest</a>
+<a href="http://forrest.apache.org/">Apache Forrest</a>
 </li>
       
 <li>
