--- a/wiki-sample.html
+++ b/wiki-sample.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Forrest's Wiki Support</title>
+<title>wiki-sample</title>
 <link type="text/css" href="skin/page.css" rel="stylesheet">
 <link rel="shortcut icon" href="favicon.ico">
 </head>
@@ -10,7 +10,7 @@
 <!--================= start Navigation Path ==================-->
 <table summary="navigation path" width="100%" border="0" cellpadding="0" cellspacing="0">
 <tr>
-<td nowrap="nowrap" valign="middle" bgcolor="#CFDCED" height="20"><img height="1" width="5" alt="" src="skin/images/spacer.gif" class="spacer"><!--===== breadcrumb trail (javascript-generated) ====--><font size="2" face="Arial, Helvetica, Sans-serif"><a href="http://www.apache.org/">apache</a> &gt; <a href="http://xml.apache.org/">xml.apache</a><script src="skin/breadcrumbs.js" language="JavaScript" type="text/javascript"></script></font></td>
+<td nowrap="nowrap" valign="middle" bgcolor="#CFDCED" height="20"><img height="1" width="5" alt="" src="skin/images/spacer.gif" class="spacer"><!--===== breadcrumb trail (javascript-generated) ====--><font size="2" face="Arial, Helvetica, Sans-serif"><a href="http://www.apache.org/">apache</a> &gt; <a href="http://forrest.apache.org/">forrest.apache</a><script src="skin/breadcrumbs.js" language="JavaScript" type="text/javascript"></script></font></td>
 </tr>
 <tr>
 <td bgcolor="#4C6C8F" height="2"><img height="2" width="2" alt="" src="skin/images/spacer.gif" class="spacer"></td>
@@ -23,7 +23,7 @@
 <!--================= start Group Logo ==================-->
 <td bgcolor="#294563"><a href="http://xml.apache.org/"><img class="logoImage" alt="Apache XML" src="images/group-logo.gif"></a></td>
 <!--================= end Group Logo ==================-->
-<!--================= start Project Logo ==================--><td width="100%" align="center" bgcolor="#294563"><a href="http://xml.apache.org/forrest/"><img class="logoImage" alt="Forrest" src="images/project-logo.gif"></a></td>
+<!--================= start Project Logo ==================--><td width="100%" align="center" bgcolor="#294563"><a href="http://forrest.apache.org/"><img class="logoImage" alt="Forrest" src="images/project-logo.gif"></a></td>
 <!--================= end Project Logo ==================-->
 <!--================= start Search ==================--><td valign="top" rowspan="2" bgcolor="#294563">
 <form target="_blank" action="http://www.google.com/search" method="get">
@@ -32,7 +32,7 @@
 <td colspan="3"><img height="10" width="1" alt="" src="skin/images/spacer.gif" class="spacer"></td>
 </tr>
 <tr>
-<td><img height="1" width="1" alt="" src="skin/images/spacer.gif" class="spacer"></td><td nowrap="nowrap"><input value="xml.apache.org" name="as_sitesearch" type="hidden"><input size="15" name="as_q" id="query" type="text"><img height="1" width="5" alt="" src="skin/images/spacer.gif" class="spacer"><input name="Search" value="Search" type="submit">
+<td><img height="1" width="1" alt="" src="skin/images/spacer.gif" class="spacer"></td><td nowrap="nowrap"><input value="forrest.apache.org" name="as_sitesearch" type="hidden"><input size="15" name="as_q" id="query" type="text"><img height="1" width="5" alt="" src="skin/images/spacer.gif" class="spacer"><input name="Search" value="Search" type="submit">
 <br>
 <font face="Arial, Helvetica, Sans-serif" size="2" color="white">
                           the Apache XML site
@@ -355,7 +355,7 @@
 <table class="title" summary="">
 <tr>
 <td valign="middle">
-<h1>Forrest's Wiki Support</h1>
+<h1>wiki-sample</h1>
 </td><td nowrap="nowrap" width="40" align="center"><a class="dida" href="wiki-sample.pdf"><img alt="PDF" src="skin/images/pdfdoc.gif" class="skin"><br>
         PDF</a></td>
 </tr>
@@ -454,7 +454,7 @@ __text__   = prints 'text' in bold.
 <a name="N10035"></a><a name="Adding+pictures"></a>
 <h4>Adding pictures</h4>
 <div style="margin-left: 0 ; border: 2px">
-<p>For security reasons uploading images is not permitted, but you can embed any image in the wiki code by putting the image available somewhere on the web in one of the allowed formats, and then just linking to it. For example, this is an inlined PNG image:  <img alt="http://xml.apache.org/forrest/images/built-with-cocoon.gif" src="http://xml.apache.org/forrest/images/built-with-cocoon.gif">. </p>
+<p>For security reasons uploading images is not permitted, but you can embed any image in the wiki code by putting the image available somewhere on the web in one of the allowed formats, and then just linking to it. For example, this is an inlined PNG image:  <img alt="http://forrest.apache.org/images/built-with-cocoon.gif" src="http://forrest.apache.org/images/built-with-cocoon.gif">. </p>
 <p>If you specify a link text ([[this one here|http://example.com/example.png]) it becomes the ALT text for those who either can't or don't want to view images. </p>
 </div>
 <a name="N10041"></a><a name="Bulleted+lists%0A"></a>
@@ -473,10 +473,12 @@ __text__   = prints 'text' in bold.
 <li>One </li>
 <li>Two </li>
 <li>Three </li>
+<ul>
 <li>Three.One </li>
 </ul>
+</ul>
 </div>
-<a name="N10054"></a><a name="Numbered+lists%0A"></a>
+<a name="N10055"></a><a name="Numbered+lists%0A"></a>
 <h4>Numbered lists
 </h4>
 <div style="margin-left: 0 ; border: 2px">
@@ -503,7 +505,7 @@ __text__   = prints 'text' in bold.
 <li>The third line is again a single-line item for your convinience. </li>
 </ul>
 </div>
-<a name="N10071"></a><a name="Definition+lists+and+comments"></a>
+<a name="N10072"></a><a name="Definition+lists+and+comments"></a>
 <h4>Definition lists and comments</h4>
 <div style="margin-left: 0 ; border: 2px">
 <p>A simple way to make definition lists is to use the ';:' -construct: </p>
@@ -516,17 +518,17 @@ __text__   = prints 'text' in bold.
 <p>Which would be seen as ;: <em>Comment here.</em> 
 </p>
 </div>
-<a name="N10089"></a><a name="Text+effects"></a>
+<a name="N1008A"></a><a name="Text+effects"></a>
 <h4>Text effects</h4>
 <div style="margin-left: 0 ; border: 2px">
 <p>You may use  <strong>bold</strong> text or  <em>italic</em> text, by using two underscores (_) and two single quotes ('), respectively. If you're on a Windows computer, make sure that you are using the correct quote sign, as there is one that looks the same, but really isn't. </p>
 </div>
-<a name="N10095"></a><a name="Preformatted+text"></a>
+<a name="N10096"></a><a name="Preformatted+text"></a>
 <h4>Preformatted text</h4>
 <div style="margin-left: 0 ; border: 2px">
 <p>If you want to add preformatted text (like code) just use three consecutive braces ({) to open a block, and three consecutive braces (}) to close a block. Edit this page for an example. </p>
 </div>
-<a name="N1009B"></a><a name="Tables"></a>
+<a name="N1009C"></a><a name="Tables"></a>
 <h4>Tables</h4>
 <div style="margin-left: 0 ; border: 2px">
 <p>You can do simple tables by using using pipe signs ('|').  Use double pipe signs to start the heading of a table, and single pipe signs to then write the rows of the table.  End with a line that is not a table. </p>
