Update some hard-coded URLs to be /docs/
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@21119 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Please note that this HTML file was _not_ created by Forrest.
          to generate a <a href="http://localhost:8888/">webapp</a>.</p>
 
    <p>For further information please read our 
-   <a href="http://forrest.apache.org/your-project.html">Getting Started</a>
+   <a href="http://forrest.apache.org/docs/your-project.html">Getting Started</a>
    guide. If you have any questions or suggestions, please subscribe to the 
    <a href="http://forrest.apache.org/mail-lists.html">Forrest mailing lists</a>.</p>
 
